...
    label.translatesAutoresizingMaskIntoConstraints = false
    return label
  }()
  
  private let usernameLabel: UILabel = {
    let label = UILabel()
    label.text = "Abogado"
    label.textAlignment = .left
    label.font = UIFont(name: "Inter-Regular_Bold", size: 34)
    label.textColor = #colorLiteral(red: 0.1017038003, green: 0.1096047685, blue: 0.1221101061, alpha: 1)
    label.translatesAutoresizingMaskIntoConstraints = false
    return label
  }()
...
