//
//  LawyersSignUpViewTest.swift
//  LegalisAppUITests
//
//  Created by Memo Figueredo on 18/6/26.
//

import XCTest

final class LawyersSignUpViewTest: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
  
  func test_checkBtnPickerView() throws {
    let app = XCUIApplication()
    app.launch()
    
    //Interactuar
    app.buttons["Abogado"].tap()
    let sexField = app.textFields["sexTextField"]//accesible identifier
    sexField.tap()
    
    let picker = app.pickers["sexPickerView"]
    XCTAssertTrue(picker.exists)
    
    picker.pickerWheels.element.adjust(toPickerWheelValue: "Masculino")
    app.buttons["sexPickerCheckButton"].tap()
    
    
    //verificar UI
    XCTAssertEqual(sexField.value as? String, "Masculino")
  }


}
